fixed the padding on mobile

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -5,6 +5,6 @@
   margin-bottom: -5rem;
 
   @include respond(tab-port) {
-    padding: 20rem 0 10rem 0;
+    padding: 0rem 0 10rem 0;
   }
 }
